2011-10-13  Satoshi Konno <skonno@cybergarage.org>
    * Fixed some memory leaks of CGUPnPAVObject.
    
2011-09-07  Satoshi Konno <skonno@cybergarage.org>
    * Changed CGUpnpAvServer::searchByBrowse:objectId to search by breadth-first search.
	* Fixed some warnings on XCode4.
    
2010-06-03  Satoshi Konno <skonno@cybergarage.org>
    * Fixed cg_upnpav_dms_new() to set a title into the root node.

2011-05-09 Jorgen Lundman
    * Fixed cg_upnp_dms_filesys_updatecontentlist() not to abort when the state variable is null.

2010-09-02  Satoshi Konno <skonno@cybergarage.org>
	* Changed CGUpnpAvServer::browseDirectChildren to get contents from non standard UPnP/AV media servers.

2010-08-20  Satoshi Konno <skonno@cybergarage.org>
	* Changed CGUpnpAvServer::browseDirectChildren to get contents from non standard UPnP/AV media servers.
	* Changed CGUpnpAvServer:browse:browseFlag:withRequestedCount to support Philips WAC7500 based on TwonkyMedia UPnP SDK/1.1.
	* Added CGUpnpAvServer::lock and unlock.

2009-05-18  Satoshi Konno <skonno@cybergarage.org>
	* Added cg_upnp_dms_condir_getsystemupdateid() and cg_upnp_dms_condir_setsystemupdateid().
	* Added a XML namespaces and schemas of DLNA into the device desctiption and the DIDL node.
	* Changed cg_upnp_media_content_settype() to set "object.container" when the specified type is contaier.

2009-04-20  Satoshi Konno <skonno@cybergarage.org>
	* Added CGUpnpAvItem:isMovieClass(), isVideoClass(), isAudioClass() and isImageClass().
	* Added CGUpnpAvServer:browseMetadata() and browseDirectChildren().

2009-04-15  Satoshi Konno <skonno@cybergarage.org>
	* Added CGUpnpAvServer:browseMetadata(), browseDirectChildren().

2009-01-29  Satoshi Konno <skonno@cybergarage.org>
	* Added CGUpnpAvResource:isImage(), isMovie() and is Audio().
	* Added CGUpnpAvResource:hasImageResource(), hasMovieResource() and is hasAudioResource().
	* Added CGUpnpAvResource:imageResource(), movieResource() and is audioResource().
	